[package]
name = "tagged-vec"
description = "A Vec which can be indexed by one specific type"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
repository = "https://github.com/sebschmi/tagged-vec"
version = "0.3.5"
license = "BSD-2-Clause"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
